--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Tilføj URL eller lad den være tom">
 <!ENTITY Ctr_anewtaburl		"Nyt faneblad-URL-side">
 <!ENTITY Ctr_anewtaburlcb	"Tilpasset nyt faneblad-URL-side (standard: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Farvenavne, hex-koder, rgb(a), og hsl(a) værdier er understøttet.">
 <!ENTITY Ctr_tab_tf_info2	"Indtastede værdier valideres ikke!">
