--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Adresse eintragen oder leer lassen">
 <!ENTITY Ctr_anewtaburl		"Seite 'Neuer Tab'">
 <!ENTITY Ctr_anewtaburlcb	"Eigene Seite 'Neuer Tab' (Standard: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Eigene private Seite 'Neuer Tab' (Standard: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Textfelder erlauben Farbnamen sowie hexadezimale, RGB(A)- und HSL(A)-Werte.">
 <!ENTITY Ctr_tab_tf_info2	"Eingegebene Werte werden nicht auf Korrektheit überprüft!">
