--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Añada una URL o déjelo vacío">
 <!ENTITY Ctr_anewtaburl		"URL de la página de nueva pestaña">
 <!ENTITY Ctr_anewtaburlcb	"URL personalizada de la página de nueva pestaña (predeterminada: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Están soportadas entradas de nombres de colores, códigos hexadecimales, y valores rgb(a) y hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
