--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Sisesta URL või jäta tühjaks">
 <!ENTITY Ctr_anewtaburl		"Uue kaardi lehe aadress">
 <!ENTITY Ctr_anewtaburlcb	"Kohandatud uue kaardi lehe aadress (vaikimisi: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Sisestada saab: värvinimed, kuuskoodid (hexcodes), rgb(a) ja hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Sisendeid ei valideerita!">
