--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Saisir une URL ou bien laisser vide">
 <!ENTITY Ctr_anewtaburl		"URL de la page de nouvel onglet">
 <!ENTITY Ctr_anewtaburlcb	"Personnaliser l'URL (par défaut : « about:newtab ») :">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Les noms de couleurs, les codes hexadécimaux, les valeurs RVB(A) et TSL(A) sont pris en charge.">
 <!ENTITY Ctr_tab_tf_info2	"Les saisies ne seront pas vérifiées !">
