--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Aggiungi URL o lascia vuoto">
 <!ENTITY Ctr_anewtaburl		"URL della pagina Nuova scheda">
 <!ENTITY Ctr_anewtaburlcb	"URL personalizzato della pagina Nuova scheda (predefinito: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"È possibile usare nomi di colori (in inglese), valori esadecimali e i formati rgb(a) e hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Nessuna validazione dell’input.">
