--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"URL を入力するか、空欄のままにしてください">
 <!ENTITY Ctr_anewtaburl		"新しいタブの URL">
 <!ENTITY Ctr_anewtaburlcb	"新しいタブを以下の URL で開く (デフォルト値: about:newtab)">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、RGB(A)、HSL(A) の値をサポートします。">
 <!ENTITY Ctr_tab_tf_info2	"入力値は検証されません。">
@@ -398,7 +399,7 @@
 <!ENTITY goCmd.label					"移動">
 <!ENTITY Ctr_menu_restart.label			"リスタート">
 <!ENTITY Ctr_restartapp					"&brandShortName; メニューとファイルメニューにリスタートを追加する">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"現在のバージョンの &brandShortName; 用の新しいオプションに下線を引く">
 
 <!ENTITY Ctr_openInCurrentTab			"入力後に現在のタブで開く">
 <!ENTITY Ctr_openInNewTab				"入力後に新しいタブで開く">
