--- a/xpi/locale/zh-CN/options_zh-cn.dtd
+++ b/xpi/locale/zh-CN/options_zh-cn.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"添加网址或放空">
 <!ENTITY Ctr_anewtaburl		"新标签页地址">
 <!ENTITY Ctr_anewtaburlcb	"自定义新标签页地址 (默认: 'about:newtab')">
+<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"可支持颜色名称, hex值, rgb(a) 以及 hsl(a) 值。">
 <!ENTITY Ctr_tab_tf_info2	"输入值不会进行校验！">
