--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -211,7 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"URL を入力するか、空欄のままにしてください">
 <!ENTITY Ctr_anewtaburl		"新しいタブの URL">
 <!ENTITY Ctr_anewtaburlcb	"新しいタブを以下の URL で開く (デフォルト値: about:newtab)">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"新しいプライベートタブを以下の URL で開く (デフォルト値: about:privatebrowsing)">
 
 <!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、RGB(A)、HSL(A) の値をサポートします。">
 <!ENTITY Ctr_tab_tf_info2	"入力値は検証されません。">
