--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -211,7 +211,7 @@
 <!ENTITY Ctr_navthrobber2	"Dodaj adres albo pozostaw puste">
 <!ENTITY Ctr_anewtaburl		"Adres strony nowej karty">
 <!ENTITY Ctr_anewtaburlcb	"Niestandardowy adres strony nowej karty (domyślny: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Niestandardowy adres strony nowej karty prywatnej (domyślny: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"Niestandardowy adres strony nowej prywatnej karty (domyślny: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Nazwy kolorów, kod szesnastkowy, wartości rgb(a) i hsl(a) są obsługiwane.">
 <!ENTITY Ctr_tab_tf_info2	"Wejścia nie będą zatwierdzane!">
