--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"Trennlinie zwischen den Ergebnissen anzeigen">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
+<!ENTITY Ctr_cresultshcb	"Eigenes Höhenlimit setzen: ">
 <!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge">
 <!ENTITY Ctr_lbsbradius		"Benutzerdefinierte Krümmung für Adressleisten- und Suchleistenrand">
 
@@ -373,6 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_fx50flyweb		"Das Deaktivieren dieser Option entfernt 'Flyweb'.">
+<!ENTITY Ctr_e_oneoffsearch	"Autovervollständigungs-Pop-ups Suchauswahl">
+<!ENTITY Ctr_fx51OOSeach	"Das Deaktivieren dieser Optionen entfernt die Suchauswahl des Autovervollständigungs-Pop-ups.">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
