--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_rhl	"Colores Aero para resultados destacados">
 <!ENTITY Ctr_autocompl_sep	"Mostrar separador entre resultados">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
+<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
 <!ENTITY Ctr_lbsbradius		"Radio de borde redondeado personalizado para barra de direcciones y barra de búsqueda">
 
@@ -372,7 +373,9 @@
 <!ENTITY Ctr_e_findbarhl	"Resaltado de la barra de herramientas de búsqueda.">
 <!ENTITY Ctr_fx50findbarhl	"Desmarcar estos ajustes suprime las funciones de 'resaltado' de la barra de herramientas de búsqueda.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_fx50flyweb		"Desmarcar esta preferencia deshabilita 'flyweb'.">
+<!ENTITY Ctr_fx50flyweb		"Desmarcar esta preferencia deshabilita 'Flyweb'.">
+<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
