--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"Dźělatko mjez wuslědkami pokazać">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
+<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
 <!ENTITY Ctr_lbsbradius		"Swójska ramikowa křiwizna za adresowe polo a pytanske polo">
 
@@ -373,6 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_fx50flyweb		"Hdyž so tute nastajenje znjemóžni, so 'flyweb' znjemóžni.">
+<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastajenja">
