--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"結果を境界線で区切る">
 <!ENTITY Ctr_urlbar_uc		"検索候補機能を統合しない">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
+<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
 <!ENTITY Ctr_lbsbradius		"ロケーションバーと検索バーの枠線の角の丸みを設定する">
 
@@ -373,6 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"この設定をオフにすると、検索バーのハイライト機能を無効にします。">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 <!ENTITY Ctr_fx50flyweb		"この設定をオフにすると、FlyWeb を無効にします。">
+<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
 
 
 <!ENTITY Ctr_pw_settings	"設定">
