--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"Разделитель между результатами">
 <!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение»">
 <!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
+<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Количество результатов">
 <!ENTITY Ctr_lbsbradius		"Пользовательский радиус границы для строки адреса поиска">
 
@@ -373,6 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
 <!ENTITY Ctr_fx50flyweb		"Отключение параметра выключает «FlyWeb».">
+<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
