--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -275,6 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"Show separator between results">
 <!ENTITY Ctr_urlbar_uc		"Deaktivér 'samlede autofuldfør'-funktion">
 <!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
+<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
 <!ENTITY Ctr_lbsugres		"Antal resultater">
 <!ENTITY Ctr_lbsbradius		"Brugerdefineret kantradius for adresselinje og søgelinje">
 
@@ -373,6 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"Unchecking these preferences removes findbars 'highlight' features.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_fx50flyweb		"Unchecking this preference disables 'flyweb'.">
+<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
+<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
 
 
 <!ENTITY Ctr_pw_settings	"Indstillinger">
