--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -275,7 +275,7 @@
 <!ENTITY Ctr_autocompl_sep	"Prikaži ločilo med rezultati">
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja'">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Omejitev višine po meri: ">
 <!ENTITY Ctr_lbsugres		"Število rezultatov">
 <!ENTITY Ctr_lbsbradius		"Polmer obrobe po meri naslovne in iskalne vrstice">
 
@@ -374,8 +374,8 @@
 <!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
 <!ENTITY Ctr_fx50flyweb		"Odznačitev te nastavitve onemogoči 'Flyweb'.">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes location bar popups search selection.">
+<!ENTITY Ctr_e_oneoffsearch	"Izbira iskanja pojavnega seznama samodokončevanja">
+<!ENTITY Ctr_fx51OOSeach	"Odznačitev te nastavitve odstrani izbiro iskanja pojavnega seznama naslovne vrstice.">
 
 
 <!ENTITY Ctr_pw_settings	"Nastavitve">
@@ -390,19 +390,19 @@
 <!ENTITY Ctr_special_font	"Nastavitve barve ozadja so samo za privzeto temo!">
 <!ENTITY Ctr_special_info	"Nekatere možnosti v vseh primerih morda ne bodo povzročile vidnih sprememb">
 <!ENTITY Ctr_special_info2	"Nastavitve so narejene za &brandShortName;ovo privzeto temo in morda ne bodo delovale z vsemi temami tretjih oseb!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Težave prijavite samo preko uradnih kanalov za podporo in ne z uporabo dodatka 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Podpora">
+<!ENTITY Ctr_support_forum1	"MozillaZine (angleški forum)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (nemški forum)">
+<!ENTITY Ctr_github_issues	"Prijavi težavo na Githubu">
+<!ENTITY Ctr_newversion		"Preveri za novo različico">
 
 <!ENTITY Ctr_addon-bar.accesskey		"d">
 <!ENTITY appMenuGettingStarted.label	"Začetek">
 <!ENTITY goCmd.label					"Pojdi">
 <!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
 <!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Podčrtaj nove možnosti za trenutno različico &brandShortName;">
 
 <!ENTITY Ctr_openInCurrentTab			"Odpri vnose v trenutnem zavihku">
 <!ENTITY Ctr_openInNewTab				"Odpri vnose v novem zavihku">
